--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
 	"name": "rsl-vsc-focused-folder",
 	"displayName": "Focused Folder",
-	"description": "",
+	"description": "This extension, views specific focus folder in Focused Folder TreeView within Explorer View",
 	"publisher": "rslfrkndmrky",
+	"keywords": [
+		"folder",
+		"focus",
+		"file explorer"
+	],
 	"version": "0.2.0",
 	"engines": {
 		"vscode": "^1.50.0"
@@ -96,5 +101,11 @@
 		"mocha": "^8.1.3",
 		"typescript": "^4.0.2",
 		"vscode-test": "^1.4.0"
-	}
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/symfurkan/rsl-vsc-focused-folder.git"
+	},
+	"homepage": "https://github.com/symfurkan/rsl-vsc-focused-folder/blob/master/README.md"
 }
+
